--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Robert de Bock
-  description: Provides xinetd
+  description: Provides xinetd.
   license: Apache License, Version 2.0
   min_ansible_version: 2.0
   min_ansible_container_version: 0.2.0
