--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,9 +1,8 @@
 galaxy_info:
   author: Robert de Bock
-  description: Provides xinetd.
+  description: Provides xinetd for your system.
   license: Apache License, Version 2.0
   min_ansible_version: 2.0
-  min_ansible_container_version: 0.2.0
 
   platforms:
   - name: Alpine
@@ -26,11 +25,17 @@ galaxy_info:
     - artful
 
   galaxy_tags:
-    - alpine
-    - debian
-    - fedora
-    - rhel
-    - ubuntu
+    - xinetd
+    - daemon
+    - networking
+    - system
+    - installer
+    - Alpine
+    - CentOS
+    - Debian
+    - Fedora
+    - RHEL
+    - Ubuntu
 
 dependencies:
   - robertdebock.bootstrap
