--- a/requirements.yml
+++ b/requirements.yml
@@ -1,2 +1,2 @@
-- name: robertdebock.bootstrap
-  src: robertdebock.bootstrap
+- name: robertdebock.ansible-role-bootstrap
+  src: robertdebock.ansible-role-bootstrap
