--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: install software
   package:
     name: xinetd
-    state: latest
+    state: present
 
 - name: start and enable software
   service:
