--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,23 +6,30 @@ galaxy_info:
   min_ansible_version: 2.2
 
   platforms:
+    - name: Alpine
+      versions:
+        - all
+    - name: ArchLinux
+      version:
+        - all
+    - name: CentOS
+      version:
+        - 6
+        - 7
     - name: Debian
       versions:
         - all
-    - name: EL
-      versions:
-        - 6
-        - 7
     - name: Fedora
       versions:
         - all
-    - name: opensuse
+    - name: OpenSUSE
       versions:
         - all
     - name: Ubuntu
       versions:
+        - trusty
+        - xenial
         - artful
-        - zesty
 
   galaxy_tags:
     - xinetd
