--- a/molecule/alpine-latest/molecule.yml
+++ b/molecule/alpine-latest/molecule.yml
@@ -8,14 +8,14 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: xinetd-fedora-27
-    image: fedora:27
+  - name: xinetd-alpine-latest
+    image: alpine:latest
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
 scenario:
-  name: fedora-27
+  name: alpine-latest
 verifier:
   name: goss
   lint:
