--- a/molecule/debian-stable/molecule.yml
+++ b/molecule/debian-stable/molecule.yml
@@ -8,14 +8,14 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: xinetd-centos-7
-    image: centos:7
+  - name: xinetd-debian-stable
+    image: debian:stable
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
 scenario:
-  name: centos-7
+  name: debian-stable
 verifier:
   name: goss
   lint:
