--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,16 +7,9 @@ galaxy_info:
   min_ansible_version: 2.4
 
   platforms:
-    - name: Alpine
-      versions:
-        - all
     - name: ArchLinux
       version:
         - all
-    - name: CentOS
-      version:
-        - 6
-        - 7
     - name: Debian
       versions:
         - all
@@ -36,15 +29,17 @@ galaxy_info:
         - bionic
 
   galaxy_tags:
-    - xinetd
-    - daemon
-    - networking
-    - system
-    - installer
+    - archlinux
     - centos
+    - daemon
     - debian
     - fedora
+    - installer
+    - networking
     - rhel
+    - opensuse
+    - system
     - ubuntu
+    - xinetd
 
 dependencies: []
