--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,5 @@
 ---
+# defaults file for xinetd
+
 # To update all packages installed by this roles, set `xinetd_package_state` to `latest`.
 xinetd_package_state: present
