--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,9 @@
   package:
     name: xinetd
     state: present
+  register: xinetd_install_software
+  until: xinetd_install_software is succeeded
+  retries: 3
 
 - name: start and enable software
   service:
