Review tags and ready for hacktoberfest

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -5,3 +5,4 @@
 repository:
   description: Install and configure xinetd on your system.
   homepage: https://robertdebock.nl/
+  topics: daemon, installer, networking, system, xinetd, ansible, molecule, tox, playbook, hacktoberfest
