--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -47,6 +47,8 @@ jobs:
             tag: "32"
           - image: "fedora"
             tag: "latest"
+          - image: "fedora"
+            tag: "rawhide"
           - image: "opensuse"
             tag: "latest"
           - image: "ubuntu"
