--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ env:
     - image="debian" tag="bullseye"
     - image="fedora" tag="32"
     - image="fedora" tag="latest"
+    - image="fedora" tag="rawhide"
     - image="opensuse" tag="latest"
     - image="ubuntu" tag="latest"
     - image="ubuntu" tag="bionic"
