--- a/meta/main.yml
+++ b/meta/main.yml
@@ -21,8 +21,7 @@ galaxy_info:
         - bullseye
     - name: Fedora
       versions:
-        - 32
-        - 33
+        - all
     - name: OpenSUSE
       versions:
         - all
