--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,9 @@
 ---
 # handlers file for xinetd
+
 - name: restart xinetd
   service:
     name: xinetd
     state: restarted
+  when:
+    - not ansible_check_mode | bool
