Start using collections.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,7 +2,7 @@
 # handlers file for xinetd
 
 - name: restart xinetd
-  service:
+  ansible.builtin.service:
     name: xinetd
     state: restarted
   when:
