The forgotten commit.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -20,7 +20,7 @@ galaxy_info:
         - all
     - name: Fedora
       versions:
-        - 33
+        - all
     - name: OpenSUSE
       versions:
         - all
