--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -42,7 +42,11 @@ jobs:
           - image: "debian"
             tag: "bookworm"
           - image: "fedora"
-            tag: "33"
+            tag: "34"
+          - image: "fedora"
+            tag: "latest"
+          - image: "fedora"
+            tag: "rawhide"
           - image: "opensuse"
             tag: "latest"
           - image: "ubuntu"
