--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,11 @@ molecule:
       - image: "debian"
         tag: "bookworm"
       - image: "fedora"
-        tag: "33"
+        tag: "34"
+      - image: "fedora"
+        tag: "latest"
+      - image: "fedora"
+        tag: "rawhide"
       - image: "opensuse"
         tag: "latest"
       - image: "ubuntu"
