--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -38,7 +38,7 @@ jobs:
           - image: "debian"
             tag: "latest"
           - image: "debian"
-            tag: "bookworm"
+            tag: "bullseye"
           - image: "opensuse"
             tag: "latest"
           - image: "ubuntu"
