--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -7,8 +7,8 @@ name: Ansible Molecule
 
 on:
   push:
-    tags_ignore:
-      - '*'
+    branches:
+      - master
   pull_request:
   schedule:
     - cron: '47 22 24 * *'
@@ -29,12 +29,8 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - image: "amazonlinux"
-            tag: "latest"
           - image: "enterpriselinux"
             tag: "8"
-          - image: "enterpriselinux"
-            tag: "latest"
           - image: "debian"
             tag: "latest"
           - image: "debian"
